Fix splash page counter alignment

--- a/index.css
+++ b/index.css
@@ -62,5 +62,5 @@ a:hover{color:pink}
 a:visited{color:#700070}
 
 #counter{
-    text-align: left;
+    text-align: right;
 }
